--- a/egg-nginx.json
+++ b/egg-nginx.json
@@ -4,29 +4,29 @@
         "version": "PTDL_v2",
         "update_url": null
     },
-    "exported_at": "2025-07-04T23:33:18+02:00",
+    "exported_at": "2025-07-04T14:44:32+02:00",
     "name": "Nginx",
     "author": "florent.jacques63260@gmail.com",
     "description": "Nginx is a web server that can also be used as a reverse proxy, load balancer, mail proxy and HTTP cache. The software was created by Russian developer Igor Sysoev and publicly released in 2004.",
     "features": null,
     "docker_images": {
-        "PHP 8.0": "florentjqs\/nginx-ptero:php8.0",
-        "PHP 8.1": "florentjqs\/nginx-ptero:php8.1",
-        "PHP 8.2": "florentjqs\/nginx-ptero:php8.2",
+        "PHP 8.4": "florentjqs\/nginx-ptero:php8.4",
         "PHP 8.3": "florentjqs\/nginx-ptero:php8.3",
-        "PHP 8.4": "florentjqs\/nginx-ptero:php8.4"
+        "PHP 8.2": "florentjqs\/nginx-ptero:php8.2",
+        "PHP 8.1": "florentjqs\/nginx-ptero:php8.1",
+        "PHP 8.0": "florentjqs\/nginx-ptero:php8.0"
     },
     "file_denylist": [],
     "startup": "{{STARTUP_CMD}}",
     "config": {
-        "files": "{}",
-        "startup": "{}",
-        "logs": "{}",
-        "stop": "^C"
+        "files": "{\r\n    \"nginx\/conf.d\/default.conf\": {\r\n        \"parser\": \"file\",\r\n        \"find\": {\r\n            \"    listen\": \"    listen {{server.build.default.port}};\"\r\n        }\r\n    }\r\n}",
+        "startup": "{\r\n    \"done\": \"Services successfully launched\"\r\n}",
+        "logs": "{\r\n    \"location\": \"logs\/latest.log\"\r\n}",
+        "stop": "^C & ^C"
     },
     "scripts": {
         "installation": {
-            "script": "#!\/bin\/bash\r\necho -e \"[SETUP] Install packages\"\r\napt-get update -qq > \/dev\/null 2>&1 && apt-get install -qq > \/dev\/null 2>&1 -y git wget\r\ncd \/mnt\/server\r\n\r\necho -e \"[SETUP] Create folders\"\r\nmkdir -p logs tmp www\r\nmkdir -p \/mnt\/server\/apache2\/socks\r\n\r\necho -e \"[SETUP] Copy Github files\"\r\ngit clone https:\/\/github.com\/florentjc\/apache-ptero.git .\/gtemp > \/dev\/null 2>&1\r\n\r\ncp -r .\/gtemp\/apache2 .\r\ncp -r .\/gtemp\/php .\r\ncp .\/gtemp\/start.sh . && rm -R .\/gtemp\r\nchmod +x start.sh\r\n\r\nOLD_VERSION=\"8.3\"\r\n\r\nmv \/mnt\/server\/apache2\/mods-available\/php${OLD_VERSION}.conf \/mnt\/server\/apache2\/mods-available\/php${PHP_VERSION}.conf\r\nmv \/mnt\/server\/apache2\/mods-available\/php${OLD_VERSION}.load \/mnt\/server\/apache2\/mods-available\/php${PHP_VERSION}.load\r\n\r\nsed -i \"s|LoadModule php_module \/usr\/lib\/apache2\/modules\/libphp${OLD_VERSION}.so|LoadModule php_module \/usr\/lib\/apache2\/modules\/libphp${PHP_VERSION}.so|\" \/mnt\/server\/apache2\/mods-available\/php${PHP_VERSION}.load\r\n\r\n\r\nmv \/mnt\/server\/apache2\/mods-enabled\/php${OLD_VERSION}.conf \/mnt\/server\/apache2\/mods-enabled\/php${PHP_VERSION}.conf\r\nmv \/mnt\/server\/apache2\/mods-enabled\/php${OLD_VERSION}.load \/mnt\/server\/apache2\/mods-enabled\/php${PHP_VERSION}.load\r\n\r\nsed -i \"s|LoadModule php_module \/usr\/lib\/apache2\/modules\/libphp${OLD_VERSION}.so|LoadModule php_module \/usr\/lib\/apache2\/modules\/libphp${PHP_VERSION}.so|\" \/mnt\/server\/apache2\/mods-enabled\/php${PHP_VERSION}.load\r\n\r\n\r\n\r\n\r\nsed -i '8s\/.*\/\tListen '\"${SERVER_PORT}\"'\/' \/mnt\/server\/apache2\/ports.conf\r\n\r\n\r\nsed -i '12s\/.*\/\tListen '\"${SERVER_PORT}\"'\/' \/mnt\/server\/apache2\/ports.conf\r\n\r\nsed -i '1s\/.*\/\t<VirtualHost *:'\"${SERVER_PORT}\"'>\/' \/mnt\/server\/apache2\/sites-enabled\/000-default.conf\r\n\r\necho \"${PHP_VERSION}\" > \"php_version.txt\"\r\n\r\nif [ \"${WORDPRESS}\" == \"true\" ] || [ \"${WORDPRESS}\" == \"1\" ]\r\nthen\r\n    echo \"[SETUP] Install Wordpress\"\r\n    cd \/mnt\/server\/www\r\n    wget -q > \/dev\/null 2>&1 http:\/\/wordpress.org\/latest.tar.gz\r\n    tar xzf latest.tar.gz >\/dev\/null 2>&1\r\n    mv wordpress\/* .\r\n    rm -rf wordpress latest.tar.gz\r\n    echo \"[SETUP] Wordpress installed - http:\/\/ip:port\/wp-admin \"\r\n    exit 0\r\nelse\r\n    echo \"<?php phpinfo(); ?>\" > \"www\/index.php\"\r\nfi\r\n\r\necho -e \"[DONE] Everything has been installed\"",
+            "script": "#!\/bin\/bash\r\necho -e \"[SETUP] Install packages\"\r\napt-get update -qq > \/dev\/null 2>&1 && apt-get install -qq > \/dev\/null 2>&1 -y git wget\r\ncd \/mnt\/server\r\n\r\necho -e \"[SETUP] Create folders\"\r\nmkdir -p logs tmp www\r\n\r\necho -e \"[SETUP] Copy Github files\"\r\ngit clone https:\/\/github.com\/florentjc\/nginx-ptero.git .\/gtemp > \/dev\/null 2>&1\r\n\r\ncp -r .\/gtemp\/nginx .\r\ncp -r .\/gtemp\/php .\r\ncp .\/gtemp\/start.sh . && rm -R .\/gtemp\r\nchmod +x start.sh\r\n\r\nif [ \"${WORDPRESS}\" == \"true\" ] || [ \"${WORDPRESS}\" == \"1\" ]\r\nthen\r\n    echo \"[SETUP] Install Wordpress\"\r\n    cd \/mnt\/server\/www\r\n    wget -q > \/dev\/null 2>&1 http:\/\/wordpress.org\/latest.tar.gz\r\n    tar xzf latest.tar.gz >\/dev\/null 2>&1\r\n    mv wordpress\/* .\r\n    rm -rf wordpress latest.tar.gz\r\n    echo \"[SETUP] Wordpress installed - http:\/\/ip:port\/wp-admin \"\r\n    exit 0\r\nelse\r\n    echo \"<?php phpinfo(); ?>\" > \"www\/index.php\"\r\nfi\r\n\r\necho -e \"[DONE] Everything has been installed\"",
             "container": "debian:bookworm-slim",
             "entrypoint": "bash"
         }
